--- a/Perfume web page/style.css
+++ b/Perfume web page/style.css
@@ -1,1 +1,65 @@
 
+*{
+   margin: 0;
+   padding: 0;
+}
+nav{
+background-color: black;
+color: white;
+padding: 20px;
+}
+ul,li{
+    display: inline;
+    color: gray;
+    cursor: pointer;
+}
+li:hover{
+    color: white;
+}
+h1{
+    display:inline-block;
+    width:1150px;
+}
+
+
+input{
+    width: 60%;
+    padding: 5px;
+
+}
+.searchbar{
+    padding:25px;
+    text-align: center;
+}
+.box{
+    border-color: black;
+    border-width: 2px;
+    border-style: solid;
+    display:inline-block;
+    width:220px;
+}
+.box:hover{
+    background-color: black;
+    color: white;
+}
+.products{
+    text-align: center;
+}
+.about{
+    margin-top: 20px;
+    text-align: center;
+    padding:20px;
+}
+.contact{
+    padding:20px;
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+.One{
+    padding:20px;
+    margin-top: 20px;
+    color:gray;
+    font-size: 12px;
+}
+
